# Kosmos

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-debug.sh  build.sh  compile_flags.txt  compile_flags_debug.txt  kosmos-debug  main  main.cpp
src/: main.cpp
src/math/: Coords.cpp  Coords.hpp  polar.cpp  polar.h
src/types/: Coords.h  CosmicObject.cpp  CosmicObject.h  CosmicObject.hpp
src/utils/: ansi_escape_code.hpp  game.cpp  game.hpp  input.cpp  input.hpp  tui.cpp  tui.hpp
types/: CosmicObject.h
